# rapier2d-ffi

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  build.sh  cbindgen.toml  rapier2d_ffi.h
.github/workflows/: release.yml
src/: lib.rs
test/: build_visual_test.sh  test_rapier2d.c  visual_test.c
